;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;  This file is part of the Codex semantics library                      ;;
;;    (patricia-tree sub-component).                                      ;;
;;                                                                        ;;
;;  Copyright (C) 2024                                                    ;;
;;    CEA (Commissariat à l'énergie atomique et aux énergies              ;;
;;         alternatives)                                                  ;;
;;                                                                        ;;
;;  You can redistribute it and/or modify it under the terms of the GNU   ;;
;;  Lesser General Public License as published by the Free Software       ;;
;;  Foundation, version 2.1.                                              ;;
;;                                                                        ;;
;;  It is distributed in the hope that it will be useful,                 ;;
;;  but WITHOUT ANY WARRANTY; without even the implied warranty of        ;;
;;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         ;;
;;  GNU Lesser General Public License for more details.                   ;;
;;                                                                        ;;
;;  See the GNU Lesser General Public License version 2.1                 ;;
;;  for more details (enclosed in the file LICENSE).                      ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(library
 (name PatriciaTree)
 (public_name patricia-tree)
 (modules :standard \ prelude PatriciaTreeTest)
 (foreign_stubs
  (language c)
  (names int_builtins)))

(documentation
 (package patricia-tree))

(mdx
 (files *.mld *.mli)
 (libraries patricia-tree)
 (preludes prelude.ml))

(library
 (name PatriciaTreeTest)
 (inline_tests
  (libraries qcheck-core))
 (preprocess
  (pps ppx_inline_test))
 (libraries PatriciaTree qcheck-core)
 (modules PatriciaTreeTest))
