;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;  This file is part of the Codex semantics library                      ;;
;;    (patricia-tree sub-component).                                      ;;
;;                                                                        ;;
;;                                                                        ;;
;;  Copyright (C) 2013-2025                                               ;;
;;    CEA (Commissariat à l'énergie atomique et aux énergies              ;;
;;         alternatives)                                                  ;;
;;                                                                        ;;
;;  You can redistribute it and/or modify it under the terms of the GNU   ;;
;;  Lesser General Public License as published by the Free Software       ;;
;;  Foundation, version 2.1.                                              ;;
;;                                                                        ;;
;;  It is distributed in the hope that it will be useful,                 ;;
;;  but WITHOUT ANY WARRANTY; without even the implied warranty of        ;;
;;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         ;;
;;  GNU Lesser General Public License for more details.                   ;;
;;                                                                        ;;
;;  See the GNU Lesser General Public License version 2.1                 ;;
;;  for more details (enclosed in the file LICENSE).                      ;;
;;                                                                        ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

; The library is instrumented with bisect_ppx. To obtain a test coverage
; report, do:
;   dune runtest --instrument-with bisect_ppx --force
;   bisect-ppx-report html

(library
 (name PatriciaTree)
 (public_name patricia-tree)
 (instrumentation
  (backend bisect_ppx))
 (foreign_stubs
  (language c)
  (names int_builtins)))

(documentation
 (package patricia-tree))

(mdx
 (files *.mld *.mli)
 (libraries patricia-tree)
 (preludes mdx/mdx_prelude.ml))
